# yoclaw

./: AGENTS.md  Cargo.toml  Containerfile  README.md  STRUCTURE.md  yoclaw.container
.github/workflows/: ci.yml
src/: cli.rs  globals.rs  main.rs
src/agent/: agent.rs  embedding.rs  impl.rs  memory.rs  message.rs  mod.rs  system_prompt.md
src/agent/skills/: install.rs  loader.rs  mod.rs  store.rs
src/agent/tools/: builtins.rs  mod.rs
src/channels/: command.rs  handler.rs  mod.rs  telegram.rs
src/config/: impl.rs  mod.rs
src/config/template/: config.toml
src/tasks/: manager.rs  mod.rs  processor.rs  router.rs  task_manager.rs
src/tools/: builtins.rs  mod.rs
