[package]
name = "yoclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
toml = "0.8"
telegram-markdown-v2 = "0.2.0"
url = "2.5.8"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sqlite-vec = "0.1.6"
bytemuck = "1.25.0"
async-trait = "0.1.89"
dirs = "6.0"
uuid = { version = "1.22.0", features = ["v7", "serde"] }
